--- a/src/components/card_projet/card.css
+++ b/src/components/card_projet/card.css
@@ -1,22 +1,22 @@
 .card {
-    width: 400px !important; /* Largeur personnalisée */
-    height: 300px; /* Hauteur personnalisée */
-    padding: 20px; /* Ajustement du rembourrage */
-    margin: 10px; /* Ajustement de la marge */
-    background-color: white; /* Couleur de fond */
-    border-radius: 10px; /* Bord arrondi */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre */
+    width: 500px !important; 
+    height: 500px; 
+    padding: 20px; 
+    margin: 10px; 
+    background-color: white; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .card img {
-    max-width: 100%; /* Assurez-vous que l'image s'adapte à la largeur de la carte */
-    max-height: 100%; /* Assurez-vous que l'image s'adapte à la hauteur de la carte */
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .card h2 {
-    font-size: 24px; /* Ajustement de la taille de la police pour le titre */
+    font-size: 24px; 
 }
 
 .card p {
-    font-size: 16px; /* Ajustement de la taille de la police pour la description */
+    font-size: 16px;
 }
